test/test_11811535_4.out
Error type B at Line 2: Missing specifier
Error type B at Line 5: Missing specifier